fix(utilities): remove squishy as option, now required

--- a/sass/frow/_utilities.scss
+++ b/sass/frow/_utilities.scss
@@ -4,7 +4,7 @@
 
 // Squishy design
 // -------------------------
-.squishy, .squishy *:not(.letsGo-animate):not(.ng-animate) {
+*:not(.letsGo-animate):not(.ng-animate) {
     transition: width 0.4s, height 0.4s, font-size 0.4s, font-weight 0.4s;
     animation: none 0s;
 }
